# Pareto-Analysis

./: .gitignore  CLAUDE.md  README.MD  app.py  main.py  pyproject.toml
data/: Untitled  analysis_results.json  analysis_summary.json  data_summary.json  flora-chats-01-09-26.csv  flora-chats-analyzed.csv  flora-chats-cleaned.csv  flora_data_01_2026_analyzed.csv  flora_data_01_2026_cleaned.csv  top4_user_analysis.json
notebooks/: analysis.ipynb  analysis_01_2026.ipynb  cleaning.ipynb  cleaning_01_2026.ipynb  quatro_users.ipynb
