[project]
name = "pareto-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "extra-streamlit-components>=0.1.81",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "nbconvert>=7.16.6",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "plotly>=6.5.1",
    "streamlit>=1.52.2",
]
